--- a/style.css
+++ b/style.css
@@ -8,6 +8,67 @@
 body {
   background: var(--shell-color);
 }
+
+.dpad-wrapper {
+  background-color: darkgray;
+  border-radius: 50%;
+  height: 180px;
+  width: 180px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  justify-content: center;
+}
+.dpad-top-bottom {
+ margin-left: auto;
+ margin-right: auto;
+}
+.dpad-middle {
+ display: flex;
+ justify-content: space-between;
+ width: 100%;
+ margin-left: auto;
+ margin-right: auto;
+}
+.dpad-button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  margin: 4px;
+}
+
+.button {
+  background-color: var(--button-color);
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin: auto;
+}
+.buttons-wrapper {
+  background-color: var(--shell-color);
+  border-radius: 60px;
+  height: 100px;
+  width: 240px;
+  display: flex;
+  padding: 10px;
+}
+
 #platformer {
   margin: 1em auto;
   position: relative;
