--- a/style.css
+++ b/style.css
@@ -24,18 +24,18 @@ body {
   justify-content: center;
 }
 .dpad-top-bottom {
- margin-left: auto;
- margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 .dpad-middle {
- display: flex;
- justify-content: space-between;
- width: 100%;
- margin-left: auto;
- margin-right: auto;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .dpad-button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   border: none;
   color: white;
   text-align: center;
@@ -83,7 +83,7 @@ body {
   display: inline-block;
   width: 100%;
   height: 100%;
-  background: #111;
+  background: black;
 }
 #instructions {
   font-style: italic;
